--- a/styles.scss
+++ b/styles.scss
@@ -7,14 +7,15 @@
 }
 
 /* Document Font Sizes*/
+$base_font_size: 9pt;
 .title {
-  font-size: 13pt;
+  font-size: $base_font_size + 4;
 }
 .header {
-  font-size: 11pt;
+  font-size: $base_font_size + 2;
 }
 * {
-  font-size: 9pt;
+  font-size: $base_font_size;
   font-family: 'Times New Roman', Times, serif;
 }
 
